--- a/landing_pages/slack-clone/src/index.css
+++ b/landing_pages/slack-clone/src/index.css
@@ -24,13 +24,11 @@
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   font-family: Slack-Larsseit, 'Helvetica Neue', Helvetica, 'Segoe UI', Tahoma, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f7fa;
+
 }
 
 h1{
@@ -40,6 +38,10 @@ h1{
   letter-spacing: -.8px;
   font-size: 2rem;
   margin-bottom: 1rem;
+}
+
+.buttons {
+  border-radius: 2px;
 }
 
 code {
