--- a/landing_pages/slack-clone/src/index.css
+++ b/landing_pages/slack-clone/src/index.css
@@ -40,13 +40,12 @@ h1{
   margin-bottom: 1rem;
 }
 
-.buttons {
-  border-radius: 2px;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2 {
+  font-size: 3.125rem;
+  font-weight: 700;
+  line-height: 1.12;
+  letter-spacing: -.8px;
+  margin-bottom: 1rem;
 }
 
 .is-fixed {
@@ -65,15 +64,12 @@ code {
 .dismiss-nav {
   animation: slide-out--up 420ms cubic-bezier(.165,.84,.44,1);
 }
-.header-items{
-  padding: .25rem .75rem;
-  font-size: .9375rem;
-  font-weight: 700;
-}
+
 .nav_label {
   position: relative;
   padding-right: 1rem;
 }
+
 .nav_label::after {
   content: '';
   display: block;
@@ -87,16 +83,71 @@ code {
   background-position-y: center;
   background-image: url(/3099b/marketing/img/icons/icon_chevron_black_nav.svg);
   /* transition: transform .1s cubic-bezier(.165,.84,.44,1); */
-  
 }
 
 .nav-buttons{
+  display: inline-block;
+  box-sizing: border-box;
   height: 45px;
   font-size: .875rem;
+  font-weight: 700;
+  line-height: 1.2857;
+  letter-spacing: .8px;
   margin-left: 1.25rem;
   padding: .75rem 1rem;
-  border-radius: 0.375rem;
+  border-radius: 4px;
+  transition: all 420ms;
+  box-shadow: inset 0 0 0 1px rgba(107, 33, 168);
   cursor: pointer;
+}
+
+.nav-buttons:hover {
+  box-shadow: inset 0 0 0 2px rgba(107, 33, 168);
+}
+
+.buttons {
+  display: inline-block;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: .875rem;
+  line-height: 1.2857;
+  letter-spacing: .8px;
+  text-align: center;
+  padding: 19px 40px 20px;
+  border-radius: 4px;
+  transition: all 420ms;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 1px rgba(107, 33, 168);
+}
+
+.buttons:hover {
+  box-shadow: inset 0 0 0 2px rgba(107, 33, 168);
+}
+
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
+
+.header-items{
+  padding: .25rem .75rem;
+  font-size: .9375rem;
+  font-weight: 700;
+}
+
+.curve-video-right {
+  border-radius: 0 250px 250px 0;
+}
+
+.curve-video-left {
+  border-radius: 250px 0 0 250px;
+}
+
+
+.stat-text {
+  margin: 0;
+  font-weight: 400;
+  font-size: .875rem;
 }
 
 .background-curve {
