Main design of landing page completed

--- a/landing_pages/slack-clone/src/index.css
+++ b/landing_pages/slack-clone/src/index.css
@@ -105,6 +105,11 @@ h2 {
   box-shadow: inset 0 0 0 2px rgba(107, 33, 168);
 }
 
+.landing-bg {
+  height: 100%;
+  background: linear-gradient(white 65%, #f4ede4 0);
+}
+
 .buttons {
   display: inline-block;
   box-sizing: border-box;
@@ -121,7 +126,25 @@ h2 {
 }
 
 .buttons:hover {
-  box-shadow: inset 0 0 0 2px rgba(107, 33, 168);
+  box-shadow: inset 0 0 0 3px rgba(107, 33, 168);
+}
+.buttons-alt {
+  display: inline-block;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: .875rem;
+  line-height: 1.2857;
+  letter-spacing: .8px;
+  text-align: center;
+  padding: 19px 40px 20px;
+  border-radius: 4px;
+  transition: all 420ms;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 1px rgb(255, 255, 255);
+}
+
+.buttons-alt:hover {
+  box-shadow: inset 0 0 0 3px rgb(255, 255, 255);
 }
 
 /* code {
@@ -152,6 +175,39 @@ h2 {
 
 .background-curve {
   clip-path: ellipse(75% 100% at center top);
+}
+
+.link-card {
+  display: flex;
+  padding: 0.75rem;
+  background-color: #fff;
+  width: 100%;
+  min-height: 420px;
+  flex-direction: column;
+  border-bottom: none;
+  max-width: 285px;
+  position: relative;
+  z-index: 1;
+  transition: transform 420ms cubic-bezier(.165,.84,.44,1);
+}
+
+.link-card:hover {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+  transform: scale(1.05);
+}
+
+.link-card-headers{
+  max-height: 349px;
+  line-height: 30px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 8px 0 16px;
+}
+.link-card-subheadings{
+  display: inline-block;
+  font-size: .875rem;
+  margin: 8px 0 0;
+  color: #454245;
 }
 
 .listitem-social{
