--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ body {
 
 }
 
+a {
+  scroll-behavior: smooth;
+}
+
 h1{
   margin: .67em 0;
   font-weight: 700;
@@ -84,7 +88,7 @@ h2 {
   padding-right: 1rem;
 }
 
-.nav_label::after {
+/* .nav_label::after {
   content: '';
   display: block;
   position: absolute;
@@ -97,8 +101,8 @@ h2 {
   background-position-y: center;
   background-image: var(--nav-icon);
   box-sizing: inherit;
-  /* transition: transform .1s cubic-bezier(.165,.84,.44,1); */
-}
+  transition: transform .1s cubic-bezier(.165,.84,.44,1);
+} */
 
 .nav-buttons{
   display: inline-block;
@@ -119,6 +123,52 @@ h2 {
 .nav-buttons:hover {
   box-shadow: inset 0 0 0 2px var(--light-red-hover);
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1000;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.search-bar {
+  display: none;
+  position: absolute;
+  width: 700px;
+  border-radius: 10px;
+  z-index: 1000000;
+}
+
+.search-bar input {
+  width: 90%;
+  outline: none;
+  border-bottom: 2px solid black;
+}
+
+.show {
+  display: block;
+}
+
+
 
 .landing-bg {
   height: 100%;
